Sun Sep  1 17:34:27 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test_legendre.c (test_legendre): increased tolerance on test

Sat Jul 13 23:11:37 2002  Brian Gough  <bjg@network-theory.co.uk>

	* ellint.c (gsl_sf_ellint_Kcomp_e): improved error estimate to
 	take cancellation of y=1-k^2 into account near k=1 

Sun Jul  7 21:39:12 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test_bessel.c (test_bessel): increased tolerance on test of
 	bessel_Jn_array

Tue May 28 21:04:29 2002  Brian Gough  <bjg@network-theory.co.uk>

	* psi.c (gsl_sf_psi_1piy_e): changed log(y) to log(ay) since
 	function is even and can be extended to negative y

Mon Jan 28 19:02:42 2002  Brian Gough  <bjg@network-theory.co.uk>

	* gamma_inc.c (gamma_inc_Q_CF): express 'small' constant in terms
 	of GSL_DBL_EPSILON
	(gamma_inc_Q_CF): patch for more reliable series from Hans Plesser

Sat Jan 26 17:33:29 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test_gamma.c (test_gamma): increased tolerance on a test

	* test_hyperg.c (test_hyperg): increased tolerance on a couple of
 	tests

Fri Jan 18 15:12:30 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test_airy.c (test_airy): increased tolerance on test

Tue Jan  8 14:31:04 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test_legendre.c (test_legendre): increased tolerance by one
 	level on _array tests

	* hyperg_1F1.c (hyperg_1F1_small_a_bgt0): fix branch for a==1

Fri Dec  7 12:38:40 2001  Brian Gough  <bjg@network-theory.co.uk>

	* laguerre.c (laguerre_n_cp): catch internal error, not global
 	error

	* error.h (INTERNAL_OVERFLOW_ERROR): added internal error macros
 	which do not call the error handler.

Wed Dec  5 19:25:26 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gamma.c (gamma_xgthalf): return gamma(x) exactly when x is an
 	integer

	* hyperg_1F1.c (hyperg_1F1_ab_posint):  fix bug in recurrence
 	initialisation, as done for hyperg_1F1_ab_pos

Thu Oct 18 11:37:25 2001  Brian Gough  <bjg@network-theory.co.uk>
